edition = "2023";

package griot.content;

option go_package = "github.com/z5labs/griot/services/content/contentpb;contentpb";

enum HashFunc {
    SHA256 = 0;
}